meecast (0.9.8) unstable; urgency=low

  * Added Sunrise and sunset for fmi.fi source
  * Added Precipitation

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 03 Aug 2014 22:31:23 +0200

meecast (0.9.7) unstable; urgency=low

  * Fixed sunrise and sunset time for weather.com source again :)
  * Updated Itailian, Hungarian, Turkish translations

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 03 Aug 2014 22:31:23 +0200

meecast (0.9.6) unstable; urgency=low

  * Fixed donation link 
  * Added translation string for gismeteo.ru
  * Fixed sunrise and sunset time for weather.com source
  * Added fmi.fi source
  * Updated Catalan, Germany, Slovenian, Spanish,
    Russian, Hungarian, Danish, Italian, Finnish translations
  * Fixed problem with null wind direction on main form
  * Added the new source fmi.fi

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 08 Jul 2014 08:31:23 +0200

meecast (0.9.5) unstable; urgency=low

  * Added translation string for gismeteo.ru
  * Fixed problem with null data for day forecast in weather.com source  
  * Updated Catalan, Finnish, Norwegian, Slovenian, Danish,
    Spanish, Italian, Russian, Hungarian, French translations
  * Fixed problem with data (humidity, feels like...) in current weather in foreca.com source 
  * Added stations to Finland in yr.no source
  * Added hourly weather forecast for yr.no source

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 08 Jul 2014 08:31:23 +0200

meecast (0.9.4) unstable; urgency=low

  * Fixed problem with current night forecsat
  * Fixed memory leaks

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 15 Jun 2014 06:31:23 +0200

meecast (0.9.3) unstable; urgency=low

  * Added United Kingdom to foreca.com source
  * Added Germany's stations to openweathermap.org source
  * Fixed "N/A" wind direction
  * Fixed problem with today data for weather.com source
  * Fixed problem with n/a icon for Atmos iconset
  * Added Danish translation
  * Updated Catalan, Chinese (Taiwan), Czech, Finnish, 
    German, Italian, Norwegian, Serbian, Slovenian,