@@ -696,35 +696,44 @@ parse_and_write_detail_xml_data(const gchar *station_id, xmlNode *root_node, con
                                     /* hour temperature */
                                    if(!xmlStrcmp(child_node2->name, (const xmlChar *)"tmp"))    {
                                         temp_xml_string = xmlNodeGetContent(child_node2);
-			                fprintf(file_out,"     <temperature>%s</temperature>\n",
-						         (char*)temp_xml_string); 
+                                        fprintf(file_out,"     <temperature>%s</temperature>\n",
+                                                         (char*)temp_xml_string); 
                                         xmlFree(temp_xml_string);
                                         continue;
                                    }
                                    /* feels like for hour */
                                    if(!xmlStrcmp(child_node2->name, (const xmlChar *)"flik")){
                                         temp_xml_string = xmlNodeGetContent(child_node2);
-			    	        fprintf(file_out,"     <flike>%s</flike>\n",
-						         (char*)temp_xml_string); 
+                                        fprintf(file_out,"     <flike>%s</flike>\n",
+                                                         (char*)temp_xml_string); 
                                         xmlFree(temp_xml_string);
                                         continue;
                                    }
                                    /* icon for hour */
                                    if(!xmlStrcmp(child_node2->name, (const xmlChar *)"icon")){
                                         temp_xml_string = xmlNodeGetContent(child_node2);
-			                fprintf(file_out,"     <icon>%s</icon>\n", 
-							   (char*)temp_xml_string);
+                                        fprintf(file_out,"     <icon>%s</icon>\n", 
+                                                         (char*)temp_xml_string);
                                         xmlFree(temp_xml_string);
                                         continue;
                                    }
                                    /* title for hour */
                                    if(!xmlStrcmp(child_node2->name, (const xmlChar *)"t")){
                                         temp_xml_string = xmlNodeGetContent(child_node2);
-			                fprintf(file_out,"     <description>%s</description>\n",
-							   (char*)temp_xml_string);
+                                        fprintf(file_out,"     <description>%s</description>\n",
+                                                        (char*)temp_xml_string);
                                         xmlFree(temp_xml_string);
                                         continue;
                                    }
+                                   /* dewpoint for hour */
+                                   if(!xmlStrcmp(child_node2->name, (const xmlChar *)"dewp")){
+                                        temp_xml_string = xmlNodeGetContent(child_node2);
+                                        fprintf(file_out,"     <dewpoint>%s</dewpoint>\n",
+                                                        (char*)temp_xml_string);
+                                        xmlFree(temp_xml_string);
+                                        continue;
+                                   }
+
                                    /* wind data for hour */
                                    if(!xmlStrcmp(child_node2->name, (const xmlChar *)"wind")){
                                         for(child_node3 = child_node2->children; child_node3 != NULL; child_node3 = child_node3->next){
@@ -732,20 +741,20 @@ parse_and_write_detail_xml_data(const gchar *station_id, xmlNode *root_node, con
                                                 /* speed */
                                                 if(!xmlStrcmp(child_node3->name, (const xmlChar *)"s")){
                                                     temp_xml_string = xmlNodeGetContent(child_node3);
-			                            fprintf(file_out,"     <wind_speed>%1.f</wind_speed>\n", 
-						            (double)(atoi((char*)temp_xml_string)) * 1000/3600);
+                                                    fprintf(file_out,"     <wind_speed>%1.f</wind_speed>\n", 
+                                                         (double)(atoi((char*)temp_xml_string)) * 1000/3600);
                                                     xmlFree(temp_xml_string);
                                                 }
                                                 /* gust */
                                                 if(!xmlStrcmp(child_node3->name, (const xmlChar *)"gust") ){
                                                     temp_xml_string = xmlNodeGetContent(child_node3);
-			                            fprintf(file_out,"     <wind_gust>%s</wind_gust>\n", (char*)temp_xml_string);
+                                                    fprintf(file_out,"     <wind_gust>%s</wind_gust>\n", (char*)temp_xml_string);
                                                     xmlFree(temp_xml_string);
                                                 }
                                                 /* direction */
                                                 if(!xmlStrcmp(child_node3->name, (const xmlChar *)"t")){
                                                     temp_xml_string = xmlNodeGetContent(child_node3);
-			                            fprintf(file_out,"     <wind_direction>%s</wind_direction>\n", (char*)temp_xml_string);
+                                                    fprintf(file_out,"     <wind_direction>%s</wind_direction>\n", (char*)temp_xml_string);
                                                     xmlFree(temp_xml_string);
                                                 }
                                             }
@@ -807,6 +816,7 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
                 wind_direction_day[256],
                 wind_direction_night[256],
 		        timezone_string[128],
+                dewpoint[256],
                 uv_index[128];
 
     struct tm   tmp_tm = {0,0,0,0,0,0,0,0,0,0,0}; 
@@ -909,6 +919,7 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
                 memset(temp_hi, 0, sizeof(temp_hi));
                 memset(temp_flike, 0, sizeof(temp_flike));
                 memset(humidity_day, 0, sizeof(humidity_day));
+                memset(dewpoint, 0, sizeof(dewpoint));
                 memset(humidity_night, 0, sizeof(humidity_night));
                 memset(pressure, 0, sizeof(pressure));
                 memset(pressure_direction, 0, sizeof(pressure_direction));
@@ -991,6 +1002,13 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
                     if(!xmlStrcmp(child_node->name, (const xmlChar *)"hmid") ){
                         temp_xml_string = xmlNodeGetContent(child_node);
                         snprintf(humidity_day, sizeof(humidity_day) - 1, "%s", (char*)temp_xml_string);
+                        xmlFree(temp_xml_string);
+                        continue;
+                    }
+                    /* dewpoint */
+                    if(!xmlStrcmp(child_node->name, (const xmlChar *)"dewp") ){
+                        temp_xml_string = xmlNodeGetContent(child_node);
+                        snprintf(dewpoint, sizeof(dewpoint) - 1, "%s", (char*)temp_xml_string);
                         xmlFree(temp_xml_string);
                         continue;
                     }
@@ -1104,6 +1122,8 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
 			    fprintf(file_out,"     <icon>%s</icon>\n", icon_day);
             if (visible[0] != 0)
 			    fprintf(file_out,"     <visible>%s</visible>\n", visible);
+            if (dewpoint[0] != 0)
+                fprintf(file_out,"     <dewpoint>%s</dewpoint>\n", dewpoint);
             if (uv_index[0] != 0)
 			    fprintf(file_out,"     <uv_index>%s</uv_index>\n", uv_index);
 
@@ -1302,9 +1322,7 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
                                         }
 
                                     }
-
                                 }
-
                             }
                         }
                         /* end of day */
